Regression: Python Traceback no longer includes line-number in Info messages #97731

Closed
opened 2022-04-30 03:16:57 +02:00 by miguel · 9 comments

Broken: 3.2.0
Worked: 3.1.2

Python Tracebacks are now no longer visible. This is really important because even if blender is now showing error messages and Exceptions, its not longer showing the line number where it went wrong, or the complete traceback in the console.

steps to recreate:
run this code in the script tab:

import bpy

bpy.asdasd #traceback should show on this line number

output: AttributeError: module 'bpy' has no attribute 'asdasd'

expected: Traceback with line number showing where the script failed

see image for reference of (expected) full traceback
Screenshot 2022-05-01 153513.png

Broken: 3.2.0 Worked: 3.1.2 Python Tracebacks are now no longer visible. This is really important because even if blender is now showing error messages and Exceptions, its not longer showing the line number where it went wrong, or the complete traceback in the console. steps to recreate: run this code in the script tab: ``` import bpy bpy.asdasd #traceback should show on this line number ``` output: AttributeError: module 'bpy' has no attribute 'asdasd' expected: Traceback with line number showing where the script failed see image for reference of (expected) full traceback ![Screenshot 2022-05-01 153513.png](https://archive.blender.org/developer/F13044325/Screenshot_2022-05-01_153513.png)
Author

Added subscriber: @achillesdawn

Added subscriber: @achillesdawn

Added subscriber: @ideasman42

Added subscriber: @ideasman42

Please include steps to redo the error.

Please include steps to redo the error.
Member

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'
Author

steps to recreate:
run this code in the script tab:

import bpy

bpy.asdasd #traceback should show on this line number

output: AttributeError: module 'bpy' has no attribute 'asdasd'

expected: Traceback with line number showing where the script failed

steps to recreate: run this code in the script tab: import bpy bpy.asdasd #traceback should show on this line number output: AttributeError: module 'bpy' has no attribute 'asdasd' expected: Traceback with line number showing where the script failed
miguel changed title from Python Traceback Lost after 3.2 new implementation of INFO messages to Python Traceback Lost after 3.2 new implementation of INFO messages (REGRESSION) 2022-05-01 23:36:01 +02:00
Campbell Barton self-assigned this 2022-05-02 10:14:20 +02:00
Philipp Oeser changed title from Python Traceback Lost after 3.2 new implementation of INFO messages (REGRESSION) to Regression: Python Traceback Lost after 3.2 new implementation of INFO messages 2022-05-02 10:25:47 +02:00
Member

Changed status from 'Needs User Info' to: 'Confirmed'

Changed status from 'Needs User Info' to: 'Confirmed'
Campbell Barton changed title from Regression: Python Traceback Lost after 3.2 new implementation of INFO messages to Regression: Python Traceback no longer includes line-number in Info messages 2022-05-02 11:10:14 +02:00

Confirmed, although the exception isn't lost, it just excludes the file & line number.

Confirmed, although the exception isn't lost, it just excludes the file & line number.

This issue was referenced by 74dfb7ca23

This issue was referenced by 74dfb7ca23b73b714b73bfaf3553d05fbbc2a29c

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#97731
No description provided.